Fix tinggal ngasih animasi dan ngatur ngatur

--- a/asset/css/thame.css
+++ b/asset/css/thame.css
@@ -31,3 +31,7 @@
   font-family: 'Product_Sans4';
   src: url('../fonts/Product Sans/Product Sans Regular_0.ttf');
 }
+
+img[alt="www.000webhost.com"]{
+  display: none;
+}
