--- a/asset/css/thame2.css
+++ b/asset/css/thame2.css
@@ -33,6 +33,5 @@
   src: url('../fonts/Product Sans/Product Sans Regular_0.ttf');
 }
 
-img[alt="www.000webhost.com"]{
-  display: none;
-}
+/*Hilangkan COpyRight 0000wepshot*/
+img[alt="www.000webhost.com"]{display: none;}
