--- a/asset/css/result.css
+++ b/asset/css/result.css
@@ -41,9 +41,9 @@
 .head-bg {max-width: 600px;position: relative;}
 .head-bg img {width: 100%;}
 
-.head-text {position: absolute;top: 15px;width: 100%;height: 100%}
-p[awal]{font-family: Helena-Font;font-size: 40px;color:#252525;margin-top: 18px;margin-right: 20px;}
-p[akhir]{font-family: Helena-Font;font-size: 40px;color:#252525;position: relative;bottom: 15px;}
+.head-text {position: absolute;top: 15px;width: 100%;height: 100%;}
+p[awal]{font-family: Helena-Font;font-size: 40px;color:#f1f1f1;margin-top: 18px;margin-right: 20px;}
+p[akhir]{font-family: Helena-Font;font-size: 40px;color:#f1f1f1;position: relative;bottom: 15px;}
 
 /*MAIN
 ======*/
